--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "nest build --webpack",
     "deploy": "npm run build && sls deploy",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -25,16 +25,9 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.5.1",
-    "@nestjs/jwt": "^7.2.0",
-    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.5.1",
     "@vendia/serverless-express": "^4.10.1",
     "aws-lambda": "^1.0.7",
-    "helmet": "^4.2.0",
-    "passport": "^0.4.1",
-    "passport-http": "^0.3.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
@@ -48,8 +41,6 @@
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.13.30",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/passport-local": "^1.0.33",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
